show pageを作成した

--- a/src/main/resources/templates/post/show.html
+++ b/src/main/resources/templates/post/show.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
+<h1>Show Page</h1>
+
+<a th:href="@{/}">index</a>
+<p th:text="${id}"></p>
+<p th:text="${post}"></p>
 
 </body>
 </html>
