--- a/src/main/resources/templates/post/index.html
+++ b/src/main/resources/templates/post/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Spring sample app</h1>
+  <a th:href="@{/post/new}">new</a>
   <table border="1">
     <tr>
       <th>id</th>
