delete機能を実装した

--- a/src/main/resources/templates/post/index.html
+++ b/src/main/resources/templates/post/index.html
@@ -17,9 +17,7 @@
       <td th:text="${post.id}"></td>
       <td th:text="${post.title}"></td>
       <td th:text="${post.body}"></td>
-      <td>
-        <a th:href="@{/post/{id}(id=${post.id})}" >show</a>
-      </td>
+      <td><a th:href="@{/post/{id}(id=${post.id})}">show</a></td>
     </tr>
   </table>
 </body>
