--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
+  <h1>Edit page</h1>
+
+  <form th:action="@{/post/{id}(id=${id})}" th:method="put">
+    <input type="text" name="title" th:value="${title}">
+     <input type="text"name="body" th:value="${body}">
+     <input type="submit">
+  </form>
 
 </body>
 </html>
